--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
- <title>My page title</title>
+ <title>Animal Instincts Newsletter</title>
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"d28e00cf0a6a121ce5bdbf225","lid":"8d5178f6f3","uniqueMethods":true}) })</script>
 </head>
 <body>
+    
 
 </body>
 </html>
